--- a/views/account_invoice.xml
+++ b/views/account_invoice.xml
@@ -1,171 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-      
-      <record id="view_invoice_form" model="ir.ui.view">
+
+      <record id="view_invoice_form2" model="ir.ui.view">
           <field name="model">account.invoice</field>
-          <field name="name">account.invoice.sii.form</field>
-          <field name="inherit_id" ref="account.invoice_form" />
+          <field name="name">account.invoice.sii.form2</field>
+          <field name="inherit_id" ref="l10n_cl_fe.view_invoice_form" />
           <field name="arch" type="xml">
-            <form>
-                <field name="document_class_ids" invisible="1"/>
-                <field name="sii_document_number" invisible="1" readonly="1"/>
-                <field name="use_documents" invisible="1"/>
-                <field name="move_name" invisible="1"/>
-                <field name="sii_code" invisible="1"/>
-            </form>
 
-            <button name="preview_invoice" position="after">
-               <button string="Imprimir Copia y Cedible" type="object" name="print_copy_cedible" />
-               <button string="Imprimir Cedible" type="object" name="print_cedible" />
-            </button>
-            <field name="invoice_line_tax_ids" position="attributes">
-              <attribute name="required">1</attribute>
-            </field>
-
-            <field name="state" position="before">
-              <button name="%(account.action_account_invoice_refund)d" type='action' string='Refund Invoice' groups="base.group_user" attrs="{'invisible': ['|',('type', '=', 'out_invoice'), ('state', 'not in', ('open','proforma2','paid'))]}"/>
-            </field>
-
-            <xpath expr="//form/sheet/h1" position="replace">
-              <h1 class="mt0">
-                <div attrs="{'invisible': [('state', '=', 'draft'), ('type', 'not in', ['in_invoice', 'in_refund'])]}">
-                    <field name="document_class_id"
-                        options="{'no_open': True, 'no_create': True}"
-                        domain="[('id', 'in', document_class_ids)]"
-                        attr="'required':[('use_documents', '=', True), ('state', '=', 'draft')],
-                              'readonly':['|', ('state', '!=', 'draft'), ('sii_document_number', '>', 0)]}"
-                        class="oe_inline"/> Número:<br/>
-                     <field name="number" readonly="1" class="oe_inline"/>
-                </div>
-                <div attrs="{'invisible': ['|', ('state', '!=', 'draft'), ('type', 'in', ['in_invoice', 'in_refund'])]}">
-                    <span class="o_form_label" attrs="{'invisible': ['|', ('state','!=','draft')]}">Siguiente</span>
-                    <field name="journal_document_class_id"
-                      attrs="{'invisible':[('use_documents', '=', False)],
-                              'required':[('use_documents', '=', True), ('state', '=', 'draft')],
-                              'readonly':['|', ('state', '!=', 'draft'), ('sii_document_number', '>', 0)]}"
-                      options="{'no_create': True}"
-                      domain="[('sii_document_class_id', 'in', document_class_ids)]"
-                      style="width: 60%"/> Número:<br/>
-                    <field name="sequence_number_next" class="oe_inline" readonly="1" attrs="{'invisible': [('sii_document_number','&gt;', 0)]}" />
-                    <field name="sii_document_number" class="oe_inline" readonly="1" attrs="{'invisible': [('sii_document_number','&lt;=', 0)]}" />
-                    <field name="sequence_number_next_prefix" invisible="1" class="oe_inline"/>
-                    <field name="number" readonly="1" invisible="1" class="oe_inline"/>
-                </div>
-              </h1>
+            <xpath expr="//field[@name='journal_id']" position="after">
+              <field name="commissions"/>
             </xpath>
 
-            <field name='partner_id' position="after">
-                <field name="activity_description"
-                        placeholder="Glosa descriptiva" options="{'no_open': True}"/>
-                <field name="acteco_ids"  invisible="1"/>
-                <field name="acteco_id" attrs="{'invisible': [('acteco_ids', '=', [])]}"
-                  domain="[('id', 'in', acteco_ids)]"
-                  options="{'no_open': True, 'no_create': True}"/>
-            </field>
-
-            <field name="user_id" position="after">
-              <field name="forma_pago" />
-              <field name="contact_id" domain="[('parent_id','=',partner_id)]" />
-            </field>
-
-            <field name="partner_bank_id" position="before">
-                <field name="vat_discriminated"/>
-            </field>
-
-
-
-            <field name="amount_untaxed" position="after">
-              <field name="amount_untaxed_global_discount" widget="monetary" attrs="{'invisible':[('amount_untaxed_global_discount','=',0)]}"/>
-              <field name="amount_untaxed_global_recargo" widget="monetary" attrs="{'invisible':[('amount_untaxed_global_recargo','=',0)]}"/>
-            </field>
-
-            <field name="comment" position="after">
-              <field name="global_descuentos_recargos" widget="one2many_list" mode="tree" context="{'default_invoice_id': active_id}">
-                <tree string="Descuetos / Recargos Globales" editable="bottom">
-                  <field name="type"/>
-                  <field name="gdr_type"/>
-                  <field name="valor"/>
-                  <field name="gdr_detail"/>
-                  <field name="aplicacion"/>
-                  <field name="amount_untaxed_global_dr" invisible="1"/>
-                  <field name="invoice_id" invisible="1"/>
-                </tree>
-              </field>
-            </field>
-
-            <field name="tax_line_ids" position="before">
-                <field name="referencias" mode="tree">
-                  <form>
-                    <group>
-                      <field name="origen" required="True"/>
-                      <field name="sii_referencia_TpoDocRef" required="True" />
-                      <field name="sii_referencia_CodRef"/>
-                      <field name="motivo"/>
-                      <field name="fecha_documento"/>
-                    </group>
-                  </form>
-                  <tree>
-                    <field name="origen" required="True"/>
-                    <field name="sii_referencia_TpoDocRef" required="True" />
-                    <field name="sii_referencia_CodRef"/>
-                    <field name="motivo"/>
-                    <field name="fecha_documento"/>
-                  </tree>
-                </field>
-            </field>
-
-            <field name="journal_id" position="after">
-                <field name="ticket" attrs="{'invisible': [('sii_code', 'in', [39, 41])]}" />
-                <field name="commissions"/>
-            </field>
-
-            <field name="account_id" position="attributes">
-                <attribute name="options">{'no_create': True}</attribute>
-            </field>
-
-            <notebook>
-                <page string="Electronic Invoice" name="electronic_invoice" attrs="{'invisible': [('use_documents', '=', False)]}">
-                    <header attrs="{'invisible': [('sii_code','=',39)]}">
-                        <button string="Download XML" type="object"
-                          name="get_xml_file"  attrs="{'invisible':['|',('state', 'in', ['draft']), ('sii_xml_request','=',False)]}"/>
-                        <button string="Download XML Exchange" type="object"
-                          name="get_xml_exchange_file"  attrs="{'invisible':['|',('state', 'in', ['draft']), ('sii_xml_request','=',False)]}"/>
-                        <button string="Envío Manual XML Intercambio" type="object"
-                          name="manual_send_exchange"  attrs="{'invisible':['|',('state', 'in', ['draft']), ('sii_xml_request','=',False)]}"/>
-                        <button string="Send XML" type="object" class="oe_highlight" name="do_dte_send_invoice" attrs="{'invisible': ['|', ('state', 'in', ['draft']),('sii_result', 'not in', ['','NoEnviado','Rechazado'])]}"/>
-                        <button string="Ask for DTE" type="object" class="oe_highlight" name="ask_for_dte_status" attrs="{'invisible':['|', ('state', 'in', ['draft']),('sii_result','in',['','NoEnviado'])]}"/>
-                        <field name='sii_result' widget="statusbar"/>
-                    </header>
-                    <group>
-                        <field name='sii_xml_request' attrs="{'invisible':[('sii_result', '=', '')]}" readonly="1" options="{'no_create': True}"/>
-                        <field name='sii_batch_number' readonly="1"/>
-                        <field name='sii_barcode_img' widget="image" attrs="{'invisible':[('sii_result', '=', '')]}" readonly="1"/>
-                        <field name='sii_message' attrs="{'invisible':[('sii_result', 'in', ['','NoEnviado'])]}" readonly="1"/>
-                        <field name='sii_xml_dte' attrs="{'invisible':[('sii_result', '=', '')]}" readonly="1"/>
-                    </group>
-                </page>
-
-                <page name="client_claim" string="Registro de Reclamo en SII" attrs="{'invisible': ['|', ('use_documents', '=', False), ('sii_result', 'in', [False, '', 'NoEnviado', 'Rechazado'])]}">
-                  <header>
-                    <button name="get_dte_claim" string="Consultar estado de Reclamo" type="object"/>
-                    <field name='claim' widget="statusbar"/>
-                  </header>
-                  <group>
-                    <field name="claim_description" />
-                  </group>
-                </page>
-
-                <page name="client_reception" string="Respuesta Cliente"  attrs="{'invisible': ['|', ('use_documents', '=', False), ('sii_result', 'in', [False, '', 'NoEnviado', 'Rechazado'])]}">
-                    <group string="La respuesta puede variar, todo depende de si el cliente cumple con darla">
-                        <field name="respuesta_ids" mode="tree">
-                            <tree>
-                                <field name="type" />
-                            </tree>
-                        </field>
-                    </group>
-                </page>
-            </notebook>
           </field>
       </record>
 
