--- a/views/address.xml
+++ b/views/address.xml
@@ -47,9 +47,9 @@
             </t>
             <div class="w-100"/>
             <div t-attf-class="form-group #{error.get('country_id') and 'o_has_error' or ''} col-lg-6 div_country" style="display:none">
-                <label class="col-form-label" for="country_id"Pais</label>
+                <label class="col-form-label" for="country_id">Pais</label>
                 <select id="country_id" name="country_id" t-attf-class="form-control #{error.get('country_id') and 'is-invalid' or ''}">
-                    <option value=""Pais...</option>
+                    <option value="">Pais...</option>
                     <t t-foreach="countries" t-as="c">
                       <option t-att-value="c.id" t-att-selected="c.name == 'Chile'">
                             <t t-esc="c.name" />
