set im-fluid inside imgs on fac pos report

--- a/report/inherit_invoice_layout.xml
+++ b/report/inherit_invoice_layout.xml
@@ -633,7 +633,9 @@
                                      <span t-field="t.tax_id.description"/>
                                    </td>
                                    <td class="text-right">
-                                       <span t-esc="t.amount if t.amount &gt; 0 else t.base" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
+				       
+					   <span t-esc="t.amount if t.amount &gt; 0 else t.base" t-options="{'widget': 'monetary', 'display_currency': o.currency_id}"/>
+					
                                    </td>
                                   </tr>
                                 </t>
@@ -738,6 +740,16 @@
       </t>
   </template>
 
+  <template id="dte_invoice_con_pagos2" inherit_id="account.report_invoice_with_payments">
+      <t t-call="web.html_container" position="replace">
+        <t t-call="web.html_container">
+          <t t-foreach="docs" t-as="o">
+	    <t t-call="openti.report_ticket" t-lang="'es_CL'"/>  
+          </t>
+        </t>
+      </t>
+  </template>
+
   <template id="dte_invoice_con_pagos" inherit_id="account.report_invoice_with_payments">
       <t t-call="web.html_container" position="replace">
         <t t-call="web.html_container">
@@ -763,6 +775,18 @@
     <t t-call="openti.dte_invoice_con_pagos" />
     <t t-call="openti.invoice_cedible" />
   </template>
+
+<report id="action_print_ticket"
+	model="account.invoice"
+	report_type="qweb-pdf"
+	string="Imprimir ticket"
+	menu="True"
+	name="openti.dte_invoice_con_pagos2"
+	file="openti.dte_invoice_con_pagos2"
+	paperformat="l10n_cl_dte_point_of_sale.paperformat_pos_boleta_ticket"
+	print_report_name="(object._get_printed_report_name())"
+	attachment_use="True"
+    attachment="'%s.pdf' % (object._get_printed_report_name())" />
 
   <report
             string="Print Cedible"
@@ -792,7 +816,12 @@
       <t t-call="web.basic_layout">
         <t t-foreach="docs" t-as="o">
             <div class="page">
-                <div class="row">
+		<div class="row">
+		    <div class="col-12 text-center">
+			<img class="img-fluid" t-att-src="'data:image/png;base64,%s' % o.sii_header()"/>
+                    </div>
+		</div>
+		<div class="row">
                     <div class="col-xs-12 text-center">
                         <h2><span t-esc="o.company_id.partner_id.name"/> </h2>
                         <h3> <span t-esc="o.company_id.partner_id.document_number"/></h3>
@@ -802,9 +831,6 @@
                     </div>
                     <div class="col-xs-12 text-center">
                         <h4> <span t-esc="o.company_id.partner_id.street"/> <span t-esc="o.company_id.partner_id.city"/></h4>
-                    </div>
-                    <div class="col-xs-12 text-center">
-                        <img t-att-src="'data:image/png;base64,%s' % o.sii_header()"/>
                     </div>
                 </div>
 
@@ -890,10 +916,12 @@
                 </div>
 
                 <div class="row">
-                  <div class="col-xs-12" >
-                     <img t-att-src="'data:image/png;base64,%s' % to_text(o.sii_barcode_img)" class="invoice_barcode"/>
+                  <div class="col-12" >
+                     <img class="img-fluid" t-att-src="'data:image/png;base64,%s' % to_text(o.sii_barcode_img)" class="invoice_barcode"/>
                   </div>
-                  <div class="col-xs-12">
+		</div>
+		<div class="row">
+                  <div class="col-12">
                       <p style="text-align:center;color:red; font-size:8px;">
                         Timbre Electrónico SII
                         <br/>
