separate roport ticket to anothers

--- a/report/inherit_invoice_layout.xml
+++ b/report/inherit_invoice_layout.xml
@@ -739,27 +739,23 @@
         </t>
       </t>
   </template>
-
-      <template id="dte_invoice_con_pagos_ticket" inherit_id="account.report_invoice_with_payments">
-      <t t-call="web.html_container" position="replace">
-        <t t-call="web.html_container">
-          <t t-foreach="docs" t-as="o">
-            <t t-call="openti.report_ticket" t-lang="'es_CL'"/>
-          </t>
-        </t>
-      </t>
-  </template>
+  
 
   <template id="dte_invoice_con_pagos" inherit_id="account.report_invoice_with_payments">
       <t t-call="web.html_container" position="replace">
         <t t-call="web.html_container">
           <t t-foreach="docs" t-as="o">
-              <t t-if="o.ticket" >
-                  <t t-call="openti.report_ticket" t-lang="'es_CL'"/>
-              </t>
-              <t t-else="" t-call="web.html_container">
-                <t t-call="openti.report_invoice_document_with_payments" t-lang="'es_CL'"/>
-              </t>
+            <t t-call="openti.report_invoice_document_with_payments" t-lang="'es_CL'"/>
+          </t>
+        </t>
+      </t>
+  </template>
+
+  <template id="dte_invoice_con_pagos_ticket" inherit_id="account.report_invoice_with_payments" primary="True">
+      <t t-call="web.html_container" position="replace">
+        <t t-call="web.html_container">
+          <t t-foreach="docs" t-as="o">
+            <t t-call="openti.report_ticket" t-lang="'es_CL'"/>
           </t>
         </t>
       </t>
@@ -785,8 +781,8 @@
 	file="openti.dte_invoice_con_pagos_ticket"
 	paperformat="l10n_cl_dte_point_of_sale.paperformat_pos_boleta_ticket"
 	print_report_name="(object._get_printed_report_name())"
-	attachment_use="False"
-    attachment="'%s.pdf' % (object._get_printed_report_name())" />
+	attachment_use="True"
+    attachment="(object.state in ('open','paid')) and ('CED_'+(object.number or '').replace('/','')+'.pdf')" />
   
 
   <report
